// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: Engenheiro Focado (Estável) 1`] = `
{
  "estudanteId": "estudante-engenheiro-focado",
  "aptidao": 8.3,
  "consistencia": 9.6,
  "dedicacao": 8,
  "diversidade": 10,
  "scoreGlobal": 8.8,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: Estudante em Transição (Pivô Vocacional) 1`] = `
{
  "estudanteId": "estudante-transicao",
  "aptidao": 7,
  "consistencia": 0,
  "dedicacao": 10,
  "diversidade": 10,
  "scoreGlobal": 6.8,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: O Estudante Errático (Dados Incompletos) 1`] = `
{
  "estudanteId": "estudante-erratico",
  "aptidao": 5,
  "consistencia": 0,
  "dedicacao": 4,
  "diversidade": 3.3,
  "scoreGlobal": 3.5,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: O Artista Explorador (Explorador) 1`] = `
{
  "estudanteId": "estudante-artista-explorador",
  "aptidao": 7.3,
  "consistencia": 8.2,
  "dedicacao": 10,
  "diversidade": 10,
  "scoreGlobal": 8.6,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: O Cientista Social (Persistente) 1`] = `
{
  "estudanteId": "estudante-cientista-social",
  "aptidao": 7,
  "consistencia": 10,
  "dedicacao": 10,
  "diversidade": 3.3,
  "scoreGlobal": 7.5,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: O Cirurgião (O Cirurgião) 1`] = `
{
  "estudanteId": "estudante-cirurgiao",
  "aptidao": 9.6,
  "consistencia": 9.5,
  "dedicacao": 10,
  "diversidade": 10,
  "scoreGlobal": 9.7,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: O Gestor Impulsivo (O Gestor Impulsivo) 1`] = `
{
  "estudanteId": "estudante-gestor-impulsivo",
  "aptidao": 7.3,
  "consistencia": 2.1,
  "dedicacao": 10,
  "diversidade": 10,
  "scoreGlobal": 7.3,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: O Hacker Hesitante (O Hacker Hesitante) 1`] = `
{
  "estudanteId": "estudante-hacker",
  "aptidao": 9,
  "consistencia": 7.3,
  "dedicacao": 10,
  "diversidade": 10,
  "scoreGlobal": 9.1,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: O Mestre da Gestão (Elite) 1`] = `
{
  "estudanteId": "estudante-mestre-gestao",
  "aptidao": 10,
  "consistencia": 10,
  "dedicacao": 10,
  "diversidade": 10,
  "scoreGlobal": 10,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;

exports[`vocacionalService > Personas Arquétipo (Characterization Tests) > deve calcular o perfil corretamente para: O Procrastinador (Baixo Volume) 1`] = `
{
  "estudanteId": "estudante-procrastinador",
  "aptidao": 5.5,
  "consistencia": 9.5,
  "dedicacao": 4,
  "diversidade": 3.3,
  "scoreGlobal": 5.6,
  "updatedAt": "2026-04-18T08:00:00.000Z",
}
`;
